"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2011-05-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-74:
	  hacprsim critical bug fix:
		pending-event queue inconsistency with killed weak events
		triggered based on evaluation ordering of pull turning
		off before opposing pull turns on (while weak-X is pulling).
		Fixed by properly enqueuing weak-X event and also
		deallocating killed events in the pending queue.
		Also strengthened condition under which yield-to-opposing-X
		events are scheduled to the pending queue.
	  Reduced test cases added.


2011-05-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-73+:
	  sim/command_registry.tcc: reset command now resets the state
		of the directory stack as well.
	  Test case added.


2011-05-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-73:
	  CRITICAL BUG FIX in 
		global_entry_context::construct_global_footprint_frame()
		incorrect name-to-index lookup due to incorrect usage of
		global-offsets.  Fixed by returning two global_offsets
		and letting caller choose the appropriate one.  
		This bug was extremely latent and introduced during the
		scalability branch/merge.
	  Added several test cases.


2011-05-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-72:
	  hacprsim: commands enabled automatic expansion of
		aggregate array references, e.g. x[0..1].y[0..2][3..4].
		This should make some commands more convenient.
		status commands now take optional process/structure
			to limit the scope of searched nodes.  
	  Test cases added.


2011-05-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-71:
	  ipple: added emit-fig, emit-dot also takes optional file
		argument ot write out to file instead of stdout.
		TODO: add options to figure generation.

